--- a/client/src/components/dash/dashside.scss
+++ b/client/src/components/dash/dashside.scss
@@ -27,13 +27,12 @@
 
 .sidsection{
 
-    width: 100%; 
-    height:5rem;
-    transform: translateY(5rem);
-    border-right: solid rgb(39, 39, 39)2px;
-    border-top:solid white 2px; ;
-    border-bottom:solid rgb(39, 39, 39) 2px; ;
-    background: rgb(39, 39, 39);
+    width: 11.5%; 
+    height:46rem;
+  
+    border-right: solid white 5px;
+    border-bottom:solid white    2px; ;
+    background: hsl(173, 82%, 24%);
 
 
 
@@ -41,22 +40,31 @@
 
     .sidebaritems{
         margin-left:1rem;
-     
+
         
     .sidebaritemgroup{
+
 
     
         margin-left: 1rem;
         margin-right: 1rem;
         margin-top: 1.5rem;
-        display: flex;
+        .imgproff{
+            border: 4.5px solid white;
+            border-radius:50rem;
+            width: 5.8rem;
+            transform: translate(-0.1rem,0.5rem);
+        }
 
 
 
 
         .sidebaritem{
-            margin-left: 0.2rem;
-            margin-right: 4rem;
+            display: flex;
+
+            margin-left: -0.5rem;
+            margin-right: 0rem;
+            margin-top: 3rem;
 
             margin-bottom: 2rem;
             width: 8rem;
@@ -65,7 +73,7 @@
             font-size: 21px;
             
             &:hover{
-                background: var(--mmy);
+                background: var(--mmm);
                 border-radius:1rem ;
            
 
