--- a/client/src/components/posts/createpost.scss
+++ b/client/src/components/posts/createpost.scss
@@ -25,13 +25,14 @@
 .createpostcard {
     box-shadow: 3px 3px 4px rgba(140, 140, 141, 0.549);
 
-    border: 2.5px solid var(--mmy);
+    border: 2.5px solid hsl(173, 82%, 24%);
 
     transform: translate(28rem, 7rem);
     width: 38rem;
     height: 13.6rem;
     border-radius: 2.3rem;
-    background: rgb(39, 39, 39);
+    background:white;
+
 
 
     .postpicname {
@@ -46,7 +47,7 @@
                 height: 50px;
                 width: 50px;
                 transform: translate(0.5rem, 1.1rem);
-                border: 2.1px solid var(--whiteColor);
+                border: 3px solid hsl(173, 82%, 24%);
 
             }
         }
@@ -65,10 +66,10 @@
             box-sizing: border-box;
             border-radius: 0.5rem;
             outline: none;
-            background: rgb(39, 39, 39);
-            color: var(--whiteColor);
+            background: white;
+            color:  rgb(39, 39, 39);
             &::placeholder {
-                color: var(--whiteColor);
+                color:  rgb(39, 39, 39);
                 font-weight: 400;
                 font-size: 18px;
             }
@@ -82,7 +83,7 @@
         .picpost {
             font-size: 25px;
             transform: translate(28rem, 0.55rem);
-            color: var(--whiteColor);
+            color: hsl(173, 82%, 24%);
 
             cursor: pointer;
             &:hover{
