--- a/client/src/components/sign/Register/register.scss
+++ b/client/src/components/sign/Register/register.scss
@@ -17,12 +17,16 @@
 }
 
 .bg{
-    padding:40px ;
+    padding:30px ;
+       background:hsl(173, 82%, 24%);
+       margin-bottom: -10;
+
 .log {
     padding: 90px ;
     max-width: 38rem;
     margin: 0 auto;
     border-radius: 2rem;
+    
 
     
     .logtext {
