--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -17,7 +17,8 @@
 }
 
 .bgl {
-  padding: 73px;
+  padding: 76px;
+  background: hsl(173, 82%, 24%);
 }
 .bgl .logl {
   padding: 90px;
@@ -25,6 +26,7 @@
   margin: 0 auto;
   transform: translateY(-10px);
   border-radius: 2rem;
+  background: hsl(173, 82%, 24%);
 }
 .bgl .logl .logtextl {
   margin-top: 1.75rem;
