--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -17,13 +17,17 @@
 }
 
 .bgl{
-    padding: 73px ;
+    padding: 76px ;
+   background:hsl(173, 82%, 24%);
 .logl{
     padding: 90px ;
     max-width: 38rem;
     margin: 0 auto;
     transform: translateY(-10px);
     border-radius: 2rem;
+    background:hsl(173, 82%, 24%);
+
+    
 
     
     .logtextl{
