--- a/client/src/components/dash/managepost.scss
+++ b/client/src/components/dash/managepost.scss
@@ -16,21 +16,21 @@
 }
 
 .tabsec {
-    padding: 0.75rem;
     table-layout: auto;
     margin-top: 5rem;
-    margin-left: 1rem;
-    
+    margin-right: 20rem;
+    transform: translate(12rem,-52rem);
+    margin-bottom: -50rem;
 
 
 
     .tabs {
-        min-width: 100%;
-        border:3px solid rgb(39, 39, 39) ;
+        width: 109%;
+        border:4px solid hsl(173, 82%, 24%) ;
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
         border-radius: 2rem;
         margin-top: 2rem;
-        background: rgb(39, 39, 39);
+        background:white;
 
 
 
@@ -38,8 +38,8 @@
             padding-top: 0.5rem;
             padding-bottom: 0.5rem;
             padding-right: 1rem;
-            border-bottom: solid white 2px;
-            color:  white;          
+            border-bottom: solid hsl(173, 82%, 24%) 3px;
+            color:  hsl(173, 82%, 24%);          
            
 
         }
@@ -49,16 +49,18 @@
             
 
             .mrp {
+
                 padding-top: 0.5rem;
                 padding-bottom: 0.5rem;
                 padding-left: 4.5rem;
                 padding-right: 1rem;
-                color:white;
+                color:black;
                 
 
                 .mrppic {
                     object-fit: cover;
                     height: 2.5rem;
+                    transform: translateX(-2rem);
 
                 }
 
