--- a/client/src/components/matchs/match.css
+++ b/client/src/components/matchs/match.css
@@ -17,7 +17,7 @@
 
 .mainmatch {
   width: 98%;
-  transform: translate(25px, 20px);
+  transform: translate(25px, 3rem);
 }
 .mainmatch .matchContent {
   justify-content: center;
@@ -27,9 +27,10 @@
   height: 100%;
   display: grid;
   row-gap: 10px;
-  border-radius: 18px;
+  border-radius: 10px;
   align-items: center;
   background: var(--cardBG);
+  box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
 }
 .mainmatch .matchContent .singlematch:hover {
