--- a/client/src/components/matchs/match.scss
+++ b/client/src/components/matchs/match.scss
@@ -17,7 +17,8 @@
 
 .mainmatch {
     width: 98%;
-        transform: translate(25px,20px);
+        transform: translate(25px,3rem);
+        
 
     .matchContent {
         justify-content: center;
@@ -28,9 +29,11 @@
             height: 100%;
             display: grid;
             row-gap: 10px;
-            border-radius: 18px;
+          
+            border-radius: 10px;
             align-items: center;
             background: var(--cardBG);
+            box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
             overflow: hidden;
 
             &:hover {
