--- a/client/src/components/profile/profinfo.css
+++ b/client/src/components/profile/profinfo.css
@@ -21,54 +21,59 @@
 }
 
 .accountinfo .accountinfffo {
-  transform: translate(2rem, 8rem);
+  transform: translate(6rem, 7rem);
   width: 95%;
   height: flex;
   border-radius: 3rem;
-  background: rgb(39, 39, 39);
+  margin-left: -1.5rem;
 }
 .accountinfo .accountinfffo .topinfo {
   height: 11rem;
-  width: 80%;
-  border-bottom: solid 2px white;
+  width: 72%;
+  border: solid 4px white;
   transform: translate(8.5rem, 1rem);
+  background: hsl(173, 82%, 24%);
+  border-radius: 3rem;
 }
 .accountinfo .accountinfffo .topinfo .profileeimg {
-  width: 9rem;
-  height: 9rem;
-  border: solid 4px white;
+  width: 10rem;
+  height: 10rem;
+  border: solid 5px hsl(173, 82%, 24%);
   border-radius: 50%;
   margin-top: 0.8rem;
-  margin-left: -7rem;
+  margin-left: -9rem;
+  transform: translate(2rem, -0.3rem);
 }
 .accountinfo .accountinfffo .topinfo .profnamme {
   color: white;
   font-size: 40px;
-  transform: translate(3rem, -7rem);
+  transform: translate(4.2rem, -8rem);
+  font-weight: 600;
 }
 .accountinfo .accountinfffo .accounattrb {
-  border: white solid 3px;
+  border: hsl(173, 82%, 24%) solid 4px;
   box-shadow: 0 2px 1px gray(255, 255, 255, 0.904);
-  background: rgb(39, 39, 39);
+  background: white;
   border-radius: 3rem;
-  width: 25%;
+  width: 28%;
   height: 25rem;
   margin-left: 2rem;
   margin-top: 3rem;
   margin-bottom: 2rem;
+  transform: translateX(2rem);
 }
 .accountinfo .accountinfffo .accounattrb .detailsprof {
   margin-left: 2.5rem;
-  transform: translateY(1rem);
-  color: white;
+  transform: translate(1rem, 1rem);
+  color: hsl(173, 82%, 24%);
   margin-top: 2rem;
   font-size: 15px;
 }
 .accountinfo .accountinfffo .accounattrb .updtbtn {
-  background: hsl(173, 82%, 24%);
+  background: var(--mmy);
   height: 2.5rem;
   width: 12rem;
-  transform: translate(4rem, 3rem);
+  transform: translate(5.5rem, 3rem);
   border-radius: 2rem;
   border: white dotted 4px;
 }
@@ -76,9 +81,8 @@
   color: white;
 }
 .accountinfo .accountinfffo .pub {
-  border-left: solid 3px white;
   width: 50rem;
-  transform: translate(30rem, -27rem);
+  transform: translate(29rem, -27rem);
   height: flex;
   border-radius: 1rem;
 }
@@ -97,21 +101,21 @@
   align-items: center;
   box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
-  border: 2.35px solid var(--whiteColor);
-  background: rgb(39, 39, 39);
+  border: 3px solid hsl(173, 82%, 24%);
+  background: white;
 }
 .accountinfo .accountinfffo .pub .postContentt .singlepostt .postcrtpicc .imgaa {
   border-radius: 50%;
   height: 55px;
   width: 55px;
   transform: translate(0.65rem, 0.8rem);
-  border: 2.2px solid var(--whiteColor);
+  border: 3px solid hsl(173, 82%, 24%);
 }
 .accountinfo .accountinfffo .pub .postContentt .singlepostt .postcreatorr {
   transform: translate(4.6rem, -2.3rem);
   font-size: 19px;
-  color: var(--whiteColor);
-  font-weight: 400;
+  color: rgb(39, 39, 39);
+  font-weight: 500;
 }
 .accountinfo .accountinfffo .pub .postContentt .singlepostt .contentdivv {
   width: 39.9rem;
@@ -122,7 +126,7 @@
 }
 .accountinfo .accountinfffo .pub .postContentt .singlepostt .contentdivv .descc {
   font-size: 17px;
-  color: var(--whiteColor);
+  color: rgb(39, 39, 39);
   font-weight: 400;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
