--- a/client/src/components/sign/Register/register.css
+++ b/client/src/components/sign/Register/register.css
@@ -17,7 +17,9 @@
 }
 
 .bg {
-  padding: 40px;
+  padding: 30px;
+  background: hsl(173, 82%, 24%);
+  margin-bottom: -10;
 }
 .bg .log {
   padding: 90px;
