--- a/client/src/pages/internautepages/pagescss/matchinfo.scss
+++ b/client/src/pages/internautepages/pagescss/matchinfo.scss
@@ -25,10 +25,14 @@
 }
 
 .matchattrib{
+    background: hsl(173, 82%, 24%);
+    transform: translateY(5rem);
+  
+    height: 40.6rem;
 .matchinfo {
-    transform: translateY(7rem);
+   
     width: 80%;
-    height: 10%;
+    height: 100%;
 
     .ffieldname {
         color: var(--mmy);
@@ -42,7 +46,7 @@
         width: 3rem;
         border-radius: 50rem;
         border: solid var(--mmy) 3px;
-        transform: translate(32.5rem, -1.7rem);
+        transform: translate(26.5rem, -1.5rem);
     }
 
     .createdby {
@@ -74,19 +78,21 @@
         transform: translate(73rem,-35rem);
         margin-bottom: -25rem;
         border-radius: 2rem;
+        background:white;
         
-        border:4px dotted white;
+        border:4px dotted hsl(173, 82%, 24%);
         .infomatchh{
-            color: var(--whiteColor);
-            font-size: 25px;
+            color: hsl(173, 82%, 24%);
+            font-size: 29px;
             margin-bottom: 1rem;
+        
             margin-left: 1rem;
             transform: translateX(3.3rem);
 
         }
         .playernames{
             margin: 0 auto;
-            color: var(--whiteColor);
+            color:rgb(39, 39, 39);
             font-weight: 500;
             transform: translate(2rem,1rem);
         }
