--- a/client/src/pages/internautepages/pagescss/profile.scss
+++ b/client/src/pages/internautepages/pagescss/profile.scss
@@ -17,16 +17,17 @@
 
 .profsec {
     padding: 40px;
-    
 
     .proff {
            padding: 20px;
         max-width: 40rem;
         max-height: 45rem;
         margin: 0 auto;
-        transform: translate(-1rem,14%);
+        transform: translate(-1rem,8%);
         border-radius: 2rem;
-        border: 6px dotted white;
+        border: 4px solid white;
+        background: hsl(173, 82%, 24%);
+
     
       
 
