login design update

--- a/client/src/components/homecomp/Welcome/welcome.css
+++ b/client/src/components/homecomp/Welcome/welcome.css
@@ -38,6 +38,8 @@
   bottom: 0;
   -o-object-fit: cover;
      object-fit: cover;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 .welcome .welcomeContent {
   width: 100%;
