--- a/client/src/components/sign/Register/register.scss
+++ b/client/src/components/sign/Register/register.scss
@@ -17,16 +17,31 @@
 }
 
 .bg{
-    padding:30px ;
-       background:hsl(173, 82%, 24%);
-       margin-bottom: -10;
+    margin-left: -2.5rem;
+
+    .vidddd{
+    position: absolute;
+    height:100%;
+    width:62rem; 
+
+      
+
+ 
+    overflow: hidden;
+    .videologg {
+    position: absolute;
+    width: 82rem;}
+    
+   
+
+    
+    }
 
 .log {
-    padding: 90px ;
+    padding:113px;
     max-width: 38rem;
-    margin: 0 auto;
-    border-radius: 2rem;
-    
+    height: 41.5rem;
+    transform: translate(60.5rem,2rem);
 
     
     .logtext {
@@ -36,7 +51,7 @@
         line-height: 2.25rem;
         font-weight: 600;
         text-align: center;
-        color: white;
+        color: var(--mm);
         transform: translateY(-65px);
 
     }
@@ -51,13 +66,28 @@
         
 
         .inputtxt {
-            padding: 0.8rem;
-            border-radius : 1.5rem;
-            outline: none;
-            background: var(--whiteColor);
+            width: 100%;
+            border: 0;
+            border-bottom: 2px solid var(--greytext);
+            outline: 0;
+            font-size: 1.05rem;
+            color: black;
+            padding: 7px 0;
+            background: transparent;
+            transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+         
 
-            
-            border: none;
+            &::placeholder {
+                color: grey;
+            }
+
+    
+            &:focus {
+                padding-bottom: 6px;
+                font-weight: 400;
+                border-width: 3px;
+                border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+                border-image-slice: 1;}
         }
 
         .btnlog {
@@ -71,6 +101,7 @@
             color: var(--whiteColor);
             border: none;
             outline: none;
+            transform: translateY(0.5rem);
             cursor: pointer;
             &:hover.btnlog{
                 background: var(--yyy);
@@ -84,7 +115,7 @@
             color: white;
             transform: translateX(100px);
             span {
-                color: var(--yyy);
+                color: var(--mm);
                 
             }
     
