--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -17,39 +17,66 @@
 }
 
 .bgl {
-  padding: 76px;
-  background: hsl(173, 82%, 24%);
+  height: 100%;
+  width: 100%;
+}
+.bgl .viddd {
+  position: absolute;
+  height: 100%;
+  width: 63rem;
+  overflow: hidden;
+}
+.bgl .viddd .videolog {
+  position: absolute;
+  width: 90rem;
 }
 .bgl .logl {
-  padding: 90px;
+  padding: 113px;
   max-width: 38rem;
-  margin: 0 auto;
-  transform: translateY(-10px);
-  border-radius: 2rem;
-  background: hsl(173, 82%, 24%);
+  margin-left: 60rem;
+  height: 41.5rem;
+  box-shadow: 0 2px 4px rgba(2, 15, 29, 0.242);
+  transform: translateY(4rem);
 }
 .bgl .logl .logtextl {
   margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-  font-size: 2.5rem;
-  line-height: 2.25rem;
-  font-weight: 600;
+  margin-bottom: 1rem;
+  font-size: 3rem;
+  font-weight: 500;
   text-align: center;
-  color: white;
-  transform: translateY(-30px);
+  color: var(--mm);
+  transform: translate(1rem, -3rem);
 }
 .bgl .logl .formtxtl {
-  transform: translateY(10PX);
+  transform: translate(1.5rem, -2rem);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 .bgl .logl .formtxtl .inputtxtl {
-  padding: 0.8rem;
-  border-radius: 1.5rem;
-  outline: none;
-  background: var(--whiteColor);
-  border: none;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+}
+.bgl .logl .formtxtl .inputtxtl::-moz-placeholder {
+  color: gray;
+}
+.bgl .logl .formtxtl .inputtxtl::placeholder {
+  color: gray;
+}
+.bgl .logl .formtxtl .inputtxtl:focus {
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
 }
 .bgl .logl .formtxtl .btnlogl {
   padding: 0.75rem;
@@ -63,6 +90,7 @@
   border: none;
   outline: none;
   cursor: pointer;
+  transform: translateY(1rem);
 }
 .bgl .logl .formtxtl .btnlogl:hover.btnlog {
   background: var(--yyy);
@@ -71,11 +99,11 @@
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
-  color: white;
-  transform: translateX(80px);
+  color: black;
+  transform: translateX(40px);
 }
 .bgl .logl .formtxtl .txtsigl span {
-  color: var(--yyy);
+  color: var(--mm);
 }
 .bgl .logl .mt {
   color: white;
