--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -16,90 +16,130 @@
     --w: hsl(0, 0%, 93%);
 }
 
-.bgl{
-    padding: 76px ;
-   background:hsl(173, 82%, 24%);
-.logl{
-    padding: 90px ;
-    max-width: 38rem;
-    margin: 0 auto;
-    transform: translateY(-10px);
-    border-radius: 2rem;
-    background:hsl(173, 82%, 24%);
+.bgl {
+ 
+height: 100%;
+width: 100%;
 
-    
+    .viddd {
+        position: absolute;
+        height:100%;
+        width:63rem; 
 
+          
+
+     
+        overflow: hidden;
+        .videolog {
+        position: absolute;
+        width: 90rem;
+        
+       
     
-    .logtextl{
-        margin-top: 1.75rem;
-        margin-bottom: 1.75rem;
-        font-size: 2.5rem;
-        line-height: 2.25rem;
-        font-weight: 600;
-        text-align: center;
-        color: white;
-        transform: translateY(-30px);
+        
+        }
 
     }
 
-    .formtxtl{
-        transform: translateY(10PX);
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        
-        
-        
+    .logl {
+        padding:113px;
+        max-width: 38rem;
+        margin-left: 60rem;    
+        height: 41.5rem;
+        box-shadow: 0 2px 4px rgba(2, 15, 29, 0.242);
+        transform: translateY(4rem);
 
-        .inputtxtl{
-            padding: 0.8rem;
-            border-radius : 1.5rem;
-            outline: none;
-            background: var(--whiteColor);
 
-            
-            border: none;
+
+        .logtextl {
+            margin-top: 1.75rem;
+            margin-bottom: 1rem;
+            font-size: 3rem;
+            font-weight: 500;
+            text-align: center;
+            color: var(--mm);
+            transform: translate(1rem,-3rem);
+
         }
 
-        .btnlogl{
-            padding: 0.75rem;
-            border-radius : 1.5rem;
-            background: var(--gradientColor);
-            text-transform: uppercase;
-            font-size: 700;
-            font-size: 1rem;
-            font-weight: 600;
-            color: var(--whiteColor);
-            border: none;
-            outline: none;
-            cursor: pointer;
-            &:hover.btnlog{
-                background: var(--yyy);
+        .formtxtl {
+            transform: translate(1.5rem,-2rem);
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+
+           .inputtxtl {
+                width: 100%;
+                border: 0;
+                border-bottom: 2px solid var(--greytext);
+                outline: 0;
+                font-size: 1.05rem;
+                color: black;
+                padding: 7px 0;
+                background: transparent;
+                transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+             
+
+                &::placeholder {
+                    color: gray;
+                }
+
+        
+                &:focus {
+                    padding-bottom: 6px;
+                    font-weight: 400;
+                    border-width: 3px;
+                    border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+                    border-image-slice: 1;}
+
+        
+            }
+
+            .btnlogl {
+                padding: 0.75rem;
+                border-radius: 1.5rem;
+                background: var(--gradientColor);
+                text-transform: uppercase;
+                font-size: 700;
+                font-size: 1rem;
+                font-weight: 600;
+                color: var(--whiteColor);
+                border: none;
+                outline: none;
+                cursor: pointer;
+                transform: translateY(1rem);
+
+                &:hover.btnlog {
+                    background: var(--yyy);
+                }
+
+            }
+
+            .txtsigl {
+                display: flex;
+                margin-top: 1.25rem;
+                gap: 0.5rem;
+                color: black;
+                transform: translateX(40px);
+
+                span {
+                    color: var(--mm);
+
+                }
+
             }
 
         }
-        .txtsigl{
-            display: flex; 
-            margin-top: 1.25rem; 
-            gap: 0.5rem; 
+
+        .mt {
             color: white;
-            transform: translateX(80px);
-            span {
-                color: var(--yyy);
-                
-            }
-    
+            font-weight: 600;
+            text-align: center;
+            transform: translateY(30px);
+
+
         }
 
     }
-    .mt{
-    color: white;
-    font-weight: 600;
-    text-align: center;
-    transform: translateY(30px);
-
-    
-     }
-
-}
 }
