--- a/client/src/pages/internautepages/pagescss/demande.css
+++ b/client/src/pages/internautepages/pagescss/demande.css
@@ -21,74 +21,141 @@
 }
 
 .demande {
-  border-top: solid white 2px;
-  transform: translateY(-1rem);
-  height: 200%;
-  background: hsl(173, 82%, 24%);
-  height: 45.615rem;
+  width: 80%;
+  height: 100;
 }
 .demande .selectedd {
   height: 10rem;
   width: 10rem;
-  transform: translate(50rem, -21rem);
+  transform: translate(29rem, -7rem);
   display: inline;
-  margin-left: 2rem;
   border-radius: 2rem;
-  border: 3px dotted white;
+  border: 3px dotted var(--mm);
 }
-.demande .ttxt {
-  color: var(--whiteColor);
-  font-size: 22px;
-  font-family: 600;
+.demande .vidm {
+  position: absolute;
+  height: 100%;
+  width: 61rem;
+  overflow: hidden;
 }
-.demande .titott {
-  font-size: 40px;
-  transform: translateY(10rem);
-  color: var(--mmy);
-  margin-bottom: 1rem;
+.demande .vidm .vidmm {
+  position: absolute;
+  width: 22.4rem;
 }
-.demande .orattrb {
-  border-radius: 0.7rem;
-  height: 2.2rem;
-  width: 15rem;
-  border: solid 2px var(--whiteColor);
-  margin-bottom: 1.5rem;
-  background: hsl(173, 82%, 24%);
-  color: white;
+.demande .demandeform {
+  width: 64rem;
+  height: 39.8rem;
+  background: white;
+  border-top-right-radius: 3rem;
+  border-bottom-right-radius: 3rem;
+  box-shadow: 0 2px 4px rgba(2, 15, 29, 0.242);
+  transform: translate(15rem);
 }
-.demande .orattrb:focus {
-  border: solid 2px var(--mmy);
-  outline: none;
+.demande .demandeform .orattrb {
+  width: 10rem;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+  transform: translate(23rem, -7rem);
 }
-.demande .ownerattrb {
-  background: hsl(173, 82%, 24%);
+.demande .demandeform .orattrb::-moz-placeholder {
+  color: gray;
+}
+.demande .demandeform .orattrb::placeholder {
+  color: gray;
+}
+.demande .demandeform .orattrb:focus {
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
+}
+.demande .demandeform .ownerattrb {
   margin: 0 auto;
-  transform: translateY(12rem);
-  width: 80%;
+  transform: translateY(9rem);
+  width: 70%;
   height: 5rem;
   border-radius: 1rem;
   display: flex;
   gap: 4rem;
   margin-left: 1rem;
-  margin-bottom: 3rem;
+  margin-top: 2rem;
 }
-.demande .fieldattrb {
-  transform: translateY(12rem);
-  border-radius: 1rem;
-  background: hsl(173, 82%, 24%);
+.demande .demandeform .fieldattrb {
+  transform: translate(23rem, 7.5rem);
+  margin-left: 1rem;
 }
-.demande .fieldattrb .ttxtt {
+.demande .demandeform .fieldattrb .fiettrb {
+  transform: translateY(-5rem);
+  width: 15rem;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+  margin-bottom: 2rem;
+}
+.demande .demandeform .fieldattrb .fiettrb::-moz-placeholder {
+  color: gray;
+}
+.demande .demandeform .fieldattrb .fiettrb::placeholder {
+  color: gray;
+}
+.demande .demandeform .fieldattrb .fiettrb:focus {
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
+}
+.demande .demandeform .fieldattrb .fiettrbn {
+  transform: translateY(-5rem);
+  width: 37rem;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+}
+.demande .demandeform .fieldattrb .fiettrbn::-moz-placeholder {
+  color: gray;
+}
+.demande .demandeform .fieldattrb .fiettrbn::placeholder {
+  color: gray;
+}
+.demande .demandeform .fieldattrb .fiettrbn:focus {
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
+}
+.demande .demandeform .fieldattrb .ttxtt {
   color: var(--whiteColor);
   font-size: 22px;
   font-family: 600;
   transform: translatey(30px);
 }
-.demande .fieldattrb .tagimgg {
+.demande .demandeform .fieldattrb .tagimgg {
   font-size: 25px;
-  color: white;
-  transform: translateX(3rem);
+  color: hsl(173, 82%, 24%);
 }
-.demande .fieldattrb .demandedesc {
+.demande .demandeform .fieldattrb .demandedesc {
   width: 40rem;
   height: 10rem;
   margin-bottom: 3rem;
@@ -97,27 +164,27 @@
   background: hsl(173, 82%, 24%);
   border: solid 2px var(--whiteColor);
 }
-.demande .fieldattrb .demandedesc:focus {
+.demande .demandeform .fieldattrb .demandedesc:focus {
   border: solid 2px var(--mmy);
   outline: none;
 }
-.demande .fieldattrb .demandedesc .ttxtt {
+.demande .demandeform .fieldattrb .demandedesc .ttxtt {
   transform: translateY(30px);
 }
-.demande .fieldattrb .btdemande {
-  transform: translate(50rem);
+.demande .demandeform .fieldattrb .btdemande {
+  transform: translate(27rem);
   margin-bottom: 5rem;
   width: 10rem;
   height: 3rem;
+  border: none;
   background: var(--gradientColor);
-  border: solid 2px;
-  box-shadow: 1px 1px 4px var(--blackColor);
+  box-shadow: 1px 1px 4px var(--greytext);
   color: white;
   font-weight: 600;
   font-size: 18px;
-  border-radius: 0.5rem;
+  border-radius: 2rem;
   cursor: pointer;
 }
-.demande .fieldattrb .btdemande:hover {
+.demande .demandeform .fieldattrb .btdemande:hover {
   background: var(--mm);
 }/*# sourceMappingURL=demande.css.map */
